--- a/kontakt-dach-system.html
+++ b/kontakt-dach-system.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Kontakt Dach-System</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=515608576"/>
-  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=327408310" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4069437331"/>
+  <link rel="stylesheet" type="text/css" href="css/kontakt-dach-system.css?crc=192529436" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3850453687"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=4046539202" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3956889806"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_kontakt-dach-system.css?crc=4211116412" id="nomq_pagesheet"/>
   <![endif]-->
     <!--custom head HTML-->
   <style type="text/css"> html,body{ overflow-x:hidden; } </style>
@@ -53,24 +53,30 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <p id="u12071-2">KONTAKT</p>
       </div>
      </div>
-     <div class="clearfix colelem shared_content" id="u12482-24" data-content-guid="u12482-24_content"><!-- content -->
-      <p id="u12482-2">DACH-SYSTEM</p>
-      <p id="u12482-3">&nbsp;</p>
-      <p id="u12482-5">SIEDZIBA</p>
-      <p id="u12482-6">&nbsp;</p>
-      <p id="u12482-8">UL. STASZICA 3C/7, 66-300 MIĘDZYRZECZ,</p>
-      <p id="u12482-10">LUBUSKIE, POLSKA</p>
-      <p id="u12482-11">&nbsp;</p>
-      <p id="u12482-13">TELEFON</p>
-      <p id="u12482-14">&nbsp;</p>
-      <p id="u12482-16">516 545 989</p>
-      <p id="u12482-17">&nbsp;</p>
-      <p id="u12482-19">NIP</p>
-      <p id="u12482-20">&nbsp;</p>
-      <p id="u12482-22">596-161-51-36</p>
+     <div class="browser_width colelem shared_content" id="u37224-bw" data-content-guid="u37224-bw_content">
+      <div id="u37224"><!-- group -->
+       <div class="clearfix" id="u37224_align_to_page">
+        <div class="clearfix grpelem" id="u12482-24"><!-- content -->
+         <p id="u12482-2">DACH-SYSTEM</p>
+         <p id="u12482-3">&nbsp;</p>
+         <p id="u12482-5">SIEDZIBA</p>
+         <p id="u12482-6">&nbsp;</p>
+         <p id="u12482-8">UL. STASZICA 3C/7, 66-300 MIĘDZYRZECZ,</p>
+         <p id="u12482-10">LUBUSKIE, POLSKA</p>
+         <p id="u12482-11">&nbsp;</p>
+         <p id="u12482-13">TELEFON</p>
+         <p id="u12482-14">&nbsp;</p>
+         <p id="u12482-16">516 545 989</p>
+         <p id="u12482-17">&nbsp;</p>
+         <p id="u12482-19">NIP</p>
+         <p id="u12482-20">&nbsp;</p>
+         <p id="u12482-22">596-161-51-36</p>
+        </div>
+       </div>
+      </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1177" data-content-above-spacer="1177" data-content-below-spacer="361" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1177" data-content-above-spacer="1076" data-content-below-spacer="361" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <a class="nonblock nontext museBGSize grpelem shared_content" id="u36581" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-content-guid="u36581_content"><!-- content --></a>
     <div class="clearfix grpelem shared_content" id="pu36590-21" data-content-guid="pu36590-21_content"><!-- column -->
      <div class="clearfix colelem shared_content" id="u36590-21" data-content-guid="u36590-21_content"><!-- content -->
@@ -114,9 +120,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u12650_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
+     <span class="browser_width colelem placeholder" data-placeholder-for="u37224-bw_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="934" data-content-above-spacer="934" data-content-below-spacer="366" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="934" data-content-above-spacer="933" data-content-below-spacer="366" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu36590-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36582_content"><!-- placeholder node --></span>
@@ -125,7 +131,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_1024" data-min-width="882" data-max-width="1024"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="clearfix grpelem placeholder" data-placeholder-for="ppu24376_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="761" data-content-above-spacer="761" data-content-below-spacer="350" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="800" data-content-above-spacer="799" data-content-below-spacer="350" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="nonblock nontext museBGSize grpelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu36590-21_content"><!-- placeholder node --></span>
     <span class="clearfix grpelem placeholder" data-placeholder-for="u36582_content"><!-- placeholder node --></span>
@@ -134,7 +140,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_881" data-min-width="571" data-max-width="881"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <span class="clearfix grpelem placeholder" data-placeholder-for="ppu24376_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="643" data-content-above-spacer="642" data-content-below-spacer="686" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="676" data-content-above-spacer="675" data-content-below-spacer="686" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu36581"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
@@ -167,7 +173,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
+     <span class="browser_width colelem placeholder" data-placeholder-for="u37224-bw_content"><!-- placeholder node --></span>
     </div>
     <div class="verticalspacer" data-offset-top="596" data-content-above-spacer="595" data-content-below-spacer="569" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36581"><!-- column -->
@@ -191,9 +197,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <span class="clearfix grpelem placeholder" data-placeholder-for="u15097_content"><!-- placeholder node --></span>
      </div>
      <span class="clearfix colelem placeholder" data-placeholder-for="pu12072_content"><!-- placeholder node --></span>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u12482-24_content"><!-- placeholder node --></span>
+     <span class="browser_width colelem placeholder" data-placeholder-for="u37224-bw_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="411" data-content-above-spacer="411" data-content-below-spacer="560" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="436" data-content-above-spacer="435" data-content-below-spacer="560" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu36581"><!-- column -->
      <span class="nonblock nontext museBGSize colelem placeholder" data-placeholder-for="u36581_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u36590-21_content"><!-- placeholder node --></span>
@@ -222,6 +228,8 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.detectScreenResolution();/* HiDPI screens */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.resizeHeight('.browser_width');/* resize height */
+Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
